--- a/notebooks/04-LaTeX.ipynb
+++ b/notebooks/04-LaTeX.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "<figure>\n",
     "<img src=\"./graphics/miktex.png\" alt=\"Word vs LaTeX\" style=\"width:35%\">\n",
-    "<small> <center>Source: [Marko Pinteric](http://www.pinteric.com/miktex.html) <figcaption> Large, complex word documents crash, or are a heculean task to open and edit.</figcaption></center></small>\n",
+    "<small> <center>Source: [Marko Pinteric](http://www.pinteric.com/miktex.html) <figcaption> Large, complex word documents crash, or are a herculean task to open and edit.</figcaption></center></small>\n",
     "</figure>\n",
     "\n",
     "### Limitations of $\\LaTeX$\n",
